Remove File Extensions from TagFormat